2012-06-13  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgraph.c (drawgraph): Do not try to detect color capabilities
	of printers. When drawing to a printer, scale line widths to match the
	widths on screen and fix placement of super- and subscripts.
	Bug #3503318

2012-06-12  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_readascii):  Bugfix for label plots using column 0
	to generate text. E.g. plot foo using 1:2:(sprintf("%d",$0)) with labels

2012-06-07  Ethan A Merritt  <merritt@u.washington.edu>

	* src/tabulate.c:  Allow tabulation (set table) of pixel values for
	IMAGE RGBIMAGE RGBA_IMAGE.

2012-06-01  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (box_range_fiddling):
	Autoscaling + auto-boxwidth + log scale on x = fail.
	Bug #3529285

2012-05-30  Ethan A Merritt  <merritt@u.washington.edu>

	* term/pslatex.trm: More helpful error message if output filename
	is not acceptable.
	Bug #3529832

	* src/interpol.c (cp_implode): This routine was not preserving the z
	value (used as a weight by smooth acsplines) of input data points.
	Bug #3529621

2012-05-20  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wcommon.h src/win/wgnuplib.h src/win/wgraph.c: Remove limit
	on number of plots which can be toggled on/off via key entries.
	Maximum number of toolbar buttons still restricted to MAXPLOTSHIDE.
	Bug #3516417

2012-05-17  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/faq-ja.tex docs/gnuplot-ja.doc man/gnuplot-ja.1:
	Sync with English FAQ rev. 1.48 and documentation rev. 1.701.2.14.

2012-05-13  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.c (do_arc) src/graphics.c (do_ellipse):  Clip the filled
	interior of circles and ellipses.
	Bug #3522515

	* docs/gnuplot.doc src/graphics.c (do_rectangle):  Establish a clipping
	behavior for rectangles - clip to fit in the graph unless one or both
	corners are given in screen coordinates.

2012-05-11  Ethan A Merritt  <merritt@u.washington.edu>
