@@ -1,5 +1,8 @@
 2012-06-13  Bastian Maerkisch  <bmaerkisch@web.de>
 
+	* config/mingw/Makefile config/msvc/Makefile:  Include
+	templates for initialization files in distribution.
+
 	* src/win/wgraph.c (drawgraph): Do not try to detect color capabilities
 	of printers. When drawing to a printer, scale line widths to match the
 	widths on screen and fix placement of super- and subscripts.
